# DIO

./: .gitignore  Hetero_gpu_T4  README.md  README_USAGE.md  closing_Report_DIOv1.md
DIO/: DIO_CLOUD.md  Dockerfile  dio_registry.db  docker-compose.camera.yaml  docker-compose.cloud.yaml  docker-compose.yaml  docker.go  go.mod  go.sum  manager.Dockerfile
dio-serve/: LICENSE  README.md  pyproject.toml
dio-serve/docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  PRODUCTION.md  USE_CASES.md
dio-serve/examples/: library_api.py  production_vllm.py  wrap_two_vllm.sh
dio-serve/results_gpu_cluster_hetero/: ANALYSIS.md  paper_snippets.md  summary.json
dio-serve/results_gpu_cluster_kaggle/: ANALYSIS.md  paper_snippets.md  summary.json
dio-serve/results_paper/: summary.json  tables.json
dio-serve/results_rls_headtohead/: paper_snippets.md  summary.json
dio-serve/results_validation/: local_realtime.json  t2_multiseed.json
dio-serve/results_workshop_final/: ANALYSIS.md  paper_snippets.md  summary.json
dio-serve/scripts/: GPU_CLUSTER_RUNBOOK.md  WORKSHOP_TRIAGE.md  latency_delay_proxy.py  real_engine_server.py  run_gpu_cluster_validation.py  run_paper_experiments.py  run_publishable_suite.py  run_real_hetero_multiseed.py  run_rls_headtohead.py  run_t2_multiseed.py  run_workshop_final_suite.py  validate_local_realtime.py
dio-serve/src/dio/: __init__.py  __main__.py  backends.py  cli.py  config.py  gateway.py  scheduler.py
dio-serve/tests/: test_scheduler.py
goserve-mlops/: go.mod
graphs_stats/: m.py  m2.py  m3.py  mm.py
paper_drafts_latex/: __DIO-RLS Technical Report_ Production ML Orchestr.docx  closing_Report_DIOv1.md  example_paper (5).aux  research.md  (+2 more)
(+461 files in other folders)
