[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dio-serve"
version = "0.2.0"
description = "DIO: predictive NLMS orchestrator that wraps vLLM / OpenAI-compatible LLM engines — zero engine patches"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "DIO Authors", email = "Nisarkeyush3@gmail.com" },
]
keywords = [
  "llm", "vllm", "inference", "scheduling", "load-balancing",
  "nlms", "openai", "heterogeneous-gpu", "serving",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3"]
bench = ["matplotlib>=3.7", "numpy>=1.24"]
nvml = ["pynvml>=11.5"]

[project.urls]
Homepage = "https://github.com/nisaral/dio"
Documentation = "https://github.com/nisaral/dio#readme"
Repository = "https://github.com/nisaral/dio"
Issues = "https://github.com/nisaral/dio/issues"

[project.scripts]
dio = "dio.cli:app"
dio-serve = "dio.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dio = ["py.typed"]
